@@ -455,7 +455,7 @@
 //542: %.0s%.0sSomeone stole %s
 // 543~548 are not used (previously @away messages)
 // @Autotrade
-549: You should be vending to use @autotrade.
+549: You should have a shop open to use @autotrade.
 
 //550 -> 650: Job Names
 550: Novice
